--- a/app/views/compras/ordenes/indexOrden.scala.html
+++ b/app/views/compras/ordenes/indexOrden.scala.html
@@ -19,18 +19,18 @@
 		classEstado = "ordenPrecurso"
 	}
 	classEstado
-	
+
 }
 
 @views.html.compras.mainCompras("Lista de órdenes", scripts) {
 	<div class="page-header">
-	
-	
+
+
 		<div class="row">
 			<div class="col-sm-7">
 				<h1>Lista de Ordenes de Compra</h1>
 			</div>
-			
+
 			<div class="col-sm-5">
 				<div class="dropdown pull-right">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
@@ -39,7 +39,7 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				   
+
 				    @if(Permiso.check("ordenesImputacionDefinitiva")) {
 				    <li role="presentation"><a role="menuitem" id="reporteImputacionDefinitiva" data-url="@controllers.compras.routes.OrdenesReportesController.reporteImputacionDefinitivaGlobal()" tabindex="-1" href="#">Imputaci&oacute;n Definitiva</a></li>
 				    }
@@ -59,14 +59,16 @@
 				    <li role="presentation"><a id="controlDolar" data-url="@controllers.compras.routes.OrdenesReportesController.controlDolar()" href="#">Control Dolar</a></li>
 				    }
 				    @if(Permiso.check("ordenesCompraReporteControProfe")) {
-				    <li role="presentation"><a class="controlProfe" data-url="@controllers.compras.routes.OrdenesReportesController.controlProfe(12)" href="#">Control PROFE 2021</a></li>
-				    <li role="presentation"><a class="controlProfe" data-url="@controllers.compras.routes.OrdenesReportesController.controlProfe(13)" href="#">Control PROFE 2022</a></li>
-				    <li role="presentation"><a class="controlProfe" data-url="@controllers.compras.routes.OrdenesReportesController.controlProfe(14)" href="#">Control PROFE 2023</a></li>
+
+				    <li role="presentation"><a class="controlProfe" data-url="@controllers.compras.routes.OrdenesReportesController.controlProfe(15)" href="#">Control PROFE 2024</a></li>
+				    <li role="presentation"><a class="controlProfe" data-url="@controllers.compras.routes.OrdenesReportesController.controlProfe(16)" href="#">Control PROFE 2025</a></li>
 				    }
-				  	
+
+				    <li role="presentation"><a id="exportacionDatosTranslados" data-url="@controllers.compras.routes.OrdenesReportesController.exportacionDatosTranslados()" href="#">Exportacion Datos Traslados</a></li>
+
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -74,7 +76,7 @@
 				    <span class="caret"></span>
 					</button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  					 
+
 				  @if(Permiso.check("ordenesCompraAccionGenerarOrdenCuadroAdjudicacion")) {
 				 	<li role="presentation"><a id="accionOrdenCuadroAdjudicacion" href="#" data-url="@controllers.compras.routes.OrdenesAccionesController.generarOrdenSegunCuadroSugerenia()" role="menuitem" tabindex="-1">Generar órden según cuadro adjudicación</a></li>
 				  }
@@ -89,21 +91,21 @@
 				  	}
 				  </ul>
 				</div>
-					
+
 				<div class="pull-right btn-header">
 					<a href="@controllers.compras.routes.OrdenesController.crear()?@UriTrack.encode()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nueva Orden</a>
 				</div>
 			</div>
 	</div>
-	
+
 	@if(flash.containsKey("success")) {
 		<div class="alert alert-success"><i class="glyphicon glyphicon-ok-sign"></i> @flash.get("success")</div>
 	}
 	@if(flash.containsKey("error")) {
 		<div class="alert alert-danger"><i class="glyphicon glyphicon-remove-sign"></i> @flash.get("error")</div>
 	}
-	
-	
+
+
 	<div id="actions">
 		<form action="" id="formSearchOrdenes" method="GET">
 		<div class="row">
@@ -124,10 +126,10 @@
 				  <button type="button" id="btn-filtro-cancelado" rel="cancelado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado
 				  	@checkbox(formBuscador("btnFiltro[3]"), 'hidden -> "hidden")
 				  </button>
-				  
+
 				</div>
 			</div>
-		</div>	 
+		</div>
 		<div class="row">
     		<div class="col-sm-2">
 				<div class="form-group">
@@ -143,13 +145,13 @@
 						@inputText(formBuscador("create_usuario.nombre"), 'name -> "", 'class -> "form-control", 'id -> "create_usuario")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchResponsable" 
-										data-title="Selección de responsables" 
-										data-url="@controllers.administracion.routes.UsuariosController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.usuario.simple" 
-										data-label="#create_usuario" 
+										id="searchResponsable"
+										data-title="Selección de responsables"
+										data-url="@controllers.administracion.routes.UsuariosController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.usuario.simple"
+										data-label="#create_usuario"
 										data-field="#create_usuario_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
@@ -164,13 +166,13 @@
 						@inputText(formBuscador("proveedor.nombre"), 'name -> "", 'class -> "form-control", 'id -> "proveedor")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchProveedor" 
-										data-title="Selección de Proveedores" 
-										data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.proveedor.simple" 
-										data-label="#proveedor" 
+										id="searchProveedor"
+										data-title="Selección de Proveedores"
+										data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.proveedor.simple"
+										data-label="#proveedor"
 										data-field="#proveedor_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
@@ -186,13 +188,13 @@
 						@inputText(formBuscador("expediente.nombre"), 'name -> "", 'class -> "form-control", 'id -> "expediente")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchExpediente" 
-										data-title="Selección de expediente" 
-										data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.expediente.simple" 
-										data-label="#expediente" 
+										id="searchExpediente"
+										data-title="Selección de expediente"
+										data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.expediente.simple"
+										data-label="#expediente"
 										data-field="#expediente_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
@@ -202,17 +204,17 @@
 			</div>
 			<div class="col-sm-2 input-group">
 				<label class="control-label">N° Orden de Provision</label>
-				<div>	
-				@inputText(formBuscador("numero_orden_provision_desde"), 
-							  'class -> "form-control inputDesdeHasta", 
-							  'id -> "numero_orden_pago_desde", 
+				<div>
+				@inputText(formBuscador("numero_orden_provision_desde"),
+							  'class -> "form-control inputDesdeHasta",
+							  'id -> "numero_orden_pago_desde",
 							  'placeholder -> "Desde")
-				@inputText(formBuscador("numero_orden_provision_hasta"), 
-						  'class -> "form-control inputDesdeHasta", 
-						  'id -> "numero_orden_pago_hasta", 
+				@inputText(formBuscador("numero_orden_provision_hasta"),
+						  'class -> "form-control inputDesdeHasta",
+						  'id -> "numero_orden_pago_hasta",
 						  'placeholder -> "Hasta")
-					  
-				</div>	
+
+				</div>
 			</div>
 			<div class="col-sm-2 input-group">
 				<label class="control-label">Fecha Fin</label>
@@ -220,13 +222,13 @@
 				@inputText(formBuscador("fecha_fin_desde"), 'class -> "form-control inputDateMascara", 'id -> "desde", 'placeholder -> "Desde")
 				@inputText(formBuscador("fecha_fin_hasta"), 'class -> "form-control inputDateMascara", 'id -> "hasta", 'placeholder -> "Hasta")
 				</div>
-				
-			</div>    		
+
+			</div>
 		</div>
 
-		
+
 		<div class="row">
-			
+
 			<div class="col-sm-2">
 				<label class="control-label">Paciente
 					<div class="input-group">
@@ -236,81 +238,81 @@
 					</div>
 				</label>
 			</div>
-			
+
 			<div class="col-sm-2">
 				<label class="control-label">Ejercicio
 					@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 				</label>
 			</div>
-			
+
 
 			<div class="col-sm-4">
 					<label for="producto_nombre" class="control-label">Producto</label>
 					<div class="input-group">
 						@inputText(formBuscador("producto.nombre"), 'class -> "form-control", 'autofocus -> "autofocus", 'id -> "producto")
 						@inputText(formBuscador("producto_id"), 'hidden -> "hidden", 'id -> "producto_id")
-						<span class="input-group-addon"><a href="#" id="searchProducto" 
-																	data-title="Selección de producto" 
-																	data-url="@controllers.compras.routes.ProductosController.modalBuscar()" 
-																	data-height="650" 
-																	data-width="700" 
-																	data-listen="modal.seleccion.producto.simple" 
+						<span class="input-group-addon"><a href="#" id="searchProducto"
+																	data-title="Selección de producto"
+																	data-url="@controllers.compras.routes.ProductosController.modalBuscar()"
+																	data-height="650"
+																	data-width="700"
+																	data-listen="modal.seleccion.producto.simple"
 																	data-label="#producto" data-field="#producto_id">
 																	<i class="glyphicon glyphicon-search"></i></a></span>
 					</div>
 				</div>
 			<div class="col-sm-2">
 				<label class="control-label">Rubro
-				@select(formBuscador("orden_rubro_id"), 
+				@select(formBuscador("orden_rubro_id"),
 				OrdenRubro.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 				 </label>
 			</div>
 			<div class="col-sm-2">
-				<label for="deposito" class="control-label">Institucion</label> 
+				<label for="deposito" class="control-label">Institucion</label>
 				<div class="input-group">
 					@inputText(formBuscador("deposito.nombre"),'class -> "form-control", 'id -> "deposito_nombre", 'autocomplete -> "off")
 					@inputText(formBuscador("deposito_id"),'hidden -> "hidden", 'id -> "deposito_id")
 					<span class="input-group-addon">
-	                	<a href="#" id="searchDeposito" data-title="Selección de Institucion" 
-	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()" 
-	                	data-height="650" data-width="700" 
-	                	data-listen="modal.seleccion.deposito.simple" 
+	                	<a href="#" id="searchDeposito" data-title="Selección de Institucion"
+	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()"
+	                	data-height="650" data-width="700"
+	                	data-listen="modal.seleccion.deposito.simple"
 	                	data-label="#deposito_nombre" data-field="#deposito_id" /> <i class="glyphicon glyphicon-search"></i></a>
 	                </span>
 				</div>
 			</div>
-		</div>	
-		<div class="row">	
+		</div>
+		<div class="row">
 			<div class="col-sm-2">
 				<div class="checkbox">
-					<label class="control-label"> 
+					<label class="control-label">
 						Moneda Extrajera
 						@checkbox(formBuscador("tipo_moneda"))
-					</label> 
-				</div> 
+					</label>
+				</div>
 			</div>
 			<div class="col-sm-2">
-				<label class="control-label"> 
+				<label class="control-label">
 					<!--  PROFE
 					@select(formBuscador("profe"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")-->
 					Tipo Cuenta
-					@select(formBuscador("tipo_cuenta_id"), 
+					@select(formBuscador("tipo_cuenta_id"),
 					TipoCuenta.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 				</label>
 			</div>
 			<div class="col-sm-2">
-				<label class="control-label"> 
+				<label class="control-label">
 					Emergencia
 					@select(formBuscador("emergencia"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
 				</label>
 			</div>
 			<div class="col-sm-2">
-				<label class="control-label"> 
+				<label class="control-label">
 					Perimido
 					@select(formBuscador("perimido"),options("NO"->"NO","SI"->"SI"), 'class -> "form-control select")
 				</label>
 			</div>
-			
+
 			<div class="col-sm-2">
 				<div class="form-group">
 				<label for="nombre" class="control-label">&nbsp;</label>
@@ -328,21 +330,21 @@
 
 		</form>
 	</div>
-	
-	
+
+
 	<div class="row">
-		
+
 	</div>
-	
+
 	@if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran Ordenes</em>
         </div>
-        
+
     } else {
-    	
-		
+
+
 		<table class="table table-striped table-bordered">
 			<thead>
 				<tr style="background: #FFFFFF;">
@@ -414,7 +416,7 @@
 		        </tr>
 	        </tfoot>
         </table>
-    			
+
     	<div class="pagination pull-right">
 		    @views.html.helpers.paginador(buscador, controllers.compras.routes.OrdenesController.index())
 		</div>
@@ -424,25 +426,25 @@ $( function (){
 	var n2 = 0;
 	var n3 = 0;
 	$(".total").each(function (index) {
-		
-		n = Number($(this).attr("rel"))+n 
+
+		n = Number($(this).attr("rel"))+n
 	})
 	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));
-	
+
 	$(".base").each(function (index) {
-		
-		n2 = Number($(this).attr("rel"))+n2 
+
+		n2 = Number($(this).attr("rel"))+n2
 	})
 	$(".baseFooter").append(formatNumberPesos(parseFloat(n2).toFixed(2)));
-	
+
 	$(".ajuste").each(function (index) {
-		
-		n3 = Number($(this).attr("rel"))+n3 
+
+		n3 = Number($(this).attr("rel"))+n3
 	})
 	$(".ajusteFooter").append(formatNumberPesos(parseFloat(n3).toFixed(2)));
-	
+
 	$( "#checkAll" ).click(function() {
-		
+
 		  	selectAll();
 	});
 	$( "input[name='check_listado[]']" ).click(function() {
@@ -456,23 +458,23 @@ function selectTrList(){
 	var n3 = 0;
 	$(".total").each(function (index) {
 		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
-			n = Number($(this).attr("rel"))+n 
+			n = Number($(this).attr("rel"))+n
 		}
 	})
 	$(".totalFooter").empty();
 	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));
-	
+
 	$(".base").each(function (index) {
 		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
-			n2 = Number($(this).attr("rel"))+n2 
+			n2 = Number($(this).attr("rel"))+n2
 		}
 	})
 	$(".baseFooter").empty();
 	$(".baseFooter").append(formatNumberPesos(parseFloat(n2).toFixed(2)));
-	
+
 	$(".ajuste").each(function (index) {
 		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
-			n3 = Number($(this).attr("rel"))+n3 
+			n3 = Number($(this).attr("rel"))+n3
 		}
 	})
 	$(".ajusteFooter").empty();
@@ -480,33 +482,35 @@ function selectTrList(){
 }
 
 function selectAll(){
-	var n = 0; 
+	var n = 0;
+	var n2 = 0;
+	var n3 = 0;
 	if($("#checkAll").prop("checked")){
 		$("input[name='check_listado[]']").prop( "checked", true );
-		
+
 	}else{
 		$( "input[name='check_listado[]']").prop( "checked", false );
 	}
-	
+
 	$(".total").each(function (index) {
-		n = Number($(this).attr("rel"))+n 
+		n = Number($(this).attr("rel"))+n
 	})
 	$(".totalFooter").empty();
 	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));
-	
+
 	$(".base").each(function (index) {
-		n2 = Number($(this).attr("rel"))+n2 
+		n2 = Number($(this).attr("rel"))+n2
 	})
 	$(".baseFooter").empty();
 	$(".baseFooter").append(formatNumberPesos(parseFloat(n2).toFixed(2)));
-	
+
 	$(".ajuste").each(function (index) {
-		n3 = Number($(this).attr("rel"))+n3 
+		n3 = Number($(this).attr("rel"))+n3
 	})
 	$(".ajusteFooter").empty();
 	$(".ajusteFooter").append(formatNumberPesos(parseFloat(n3).toFixed(2)));
 }
 
-</script>		
+</script>
  	 }
 }
