--- a/app/views/expediente/expediente/verExpediente.scala.html
+++ b/app/views/expediente/expediente/verExpediente.scala.html
@@ -5,7 +5,7 @@
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/expediente/expediente.js")" type="text/javascript"></script>
 }
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @views.html.expediente.mainExpediente("Vista Expediente",scripts) {
 	<div class="page-header">
@@ -14,7 +14,7 @@
 				<h1>Vista Expediente</h1>
 			</div>
 			<div class="col-sm-4">
-				 
+
 			</div>
 			<div class="col-sm-5">
 				<div class="dropdown pull-right btn-header">
@@ -24,11 +24,12 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				    <li role="presentation"><a role="menuitem" id="reporteTapaExpediente" href="@controllers.expediente.routes.ExpedientesController.reporteTapaExpediente(lc.id)" tabindex="-1">Tapa Expediente</a></li>
+				    <li role="presentation"><a role="menuitem" id="reporteTapaExpediente" href="@controllers.expediente.routes.ExpedientesController.reporteTapaExpediente(lc.id,false)" tabindex="-1">Tapa Expediente</a></li>
+				    <li role="presentation"><a role="menuitem" id="reporteTapaExpediente" href="@controllers.expediente.routes.ExpedientesController.reporteTapaExpediente(lc.id,true)" tabindex="-1">Tapa Expediente Plan Sumar</a></li>
 				  	<li><a id="reportePaseExpediente" href="#" data-url="@controllers.expediente.routes.ExpedientesReportesController.reportePaseExpediente(lc.id)">Reporte Pase Expediente</a></li>
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-list-alt"></i>
@@ -50,32 +51,32 @@
 				  	}
 				  	@if(Permiso.check("expedientesPasarAOtroServicio")) {
 				  	<li role="presentation">
-				  		<a role="menuitem" id="accionPasarOtroServicio" tabindex="-1" href="#" 
+				  		<a role="menuitem" id="accionPasarOtroServicio" tabindex="-1" href="#"
 				    						   data-url="@controllers.expediente.routes.ExpedientesAccionesController.modalPasarOtroServicioIndividual(lc.id)">
 				    						   Pasar a otro servicio</a>
 				 	</li>
 				 	}
-				 	
+
 				 	@if(Permiso.check("expedientesCancelarPase")) {
 				    <li><a id="cancelarPase" href="#" data-url="@controllers.expediente.routes.ExpedientesAccionesController.cancelarPase(lc.id)">Cancelar Pase</a></li>
 				  	}
 				  	@if(Permiso.check("expedientesAsignarMiServicio")) {
 				  	<li role="presentation">
-				  		<a role="menuitem" id="asignarMiServicio" tabindex="-1" href="#" 
+				  		<a role="menuitem" id="asignarMiServicio" tabindex="-1" href="#"
 				    						   data-url="@controllers.expediente.routes.ExpedientesAccionesController.asignarMiServicio(lc.id)">
 				    						   Asignar a Mi Servicio</a>
 				 	</li>
 				 	}
 				  </ul>
 				</div>
-				
+
 				<div class="pull-right btn-header">
 					<a href="@controllers.expediente.routes.ExpedientesController.crearExpediente()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nuevo expediente</a>
 				</div>
 			</div>
 		</div>
-	</div>		
-@views.html.tags.successError()	
+	</div>
+@views.html.tags.successError()
 	<div class="row menu-acciones">
 		<div class="col-sm-4">
 			<a href="@controllers.expediente.routes.ExpedientesController.editarExpediente(lc.id)"  class="btn btn-default"><i class="glyphicon glyphicon-edit"></i> Editar</a>
@@ -85,15 +86,15 @@
 			}
 		</div>
 		<div class="col-sm-6">
-				@if(lc.servicio != null) { 
+				@if(lc.servicio != null) {
 				<h2>Depto/Servicio - @lc.servicio</h2>
 				}
 		</div>
 		<div class="col-sm-2">
-			<a href="@UriTrack.getOnNull(controllers.expediente.routes.ExpedientesController.indexExpediente().absoluteURL())" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a> 
-		</div> 
-	</div>	
-	
+			<a href="@UriTrack.getOnNull(controllers.expediente.routes.ExpedientesController.indexExpediente().absoluteURL())" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a>
+		</div>
+	</div>
+
 	<input type="hidden" id="expedienteId" name="expedienteId" value="@lc.id"/>
 	<div class="row">
 		<div class="col-sm-2">
@@ -107,7 +108,7 @@
 				<label class="control-label">Descripcion</label>
 				<p class="form-control-static form-control">@lcForm.field("descripcion").value</p>
 			</div>
-		</div> 
+		</div>
 	</div>
 	<div class="row">
 	 	<div class="col-sm-2">
@@ -128,7 +129,7 @@
 				<p class="form-control-static form-control">@if(lc.iniciador != null){@(lc.iniciador.nombre)}</p>
 			</div>
 		</div>
-	</div> 
+	</div>
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="form-group">
@@ -145,8 +146,8 @@
 					@checkbox(lcForm("residuo_pasivo"), 'disabled -> "disabled")
 				</label>
 			</div>
-		</div>	
-		
+		</div>
+
 		<div class="col-sm-2">
 			<div class="checkbox">
 				<label class="control-label">
@@ -154,7 +155,7 @@
 					@checkbox(lcForm("reservado"), 'disabled -> "disabled")
 				</label>
 			</div>
-		</div>	
+		</div>
 		<div class="col-sm-3">
 			<div class="checkbox">
 				<label class="control-label">
@@ -162,7 +163,7 @@
 					@checkbox(lcForm("licitacion"), 'disabled -> "disabled")
 				</label>
 			</div>
-		</div>	
+		</div>
 		<div class="col-sm-3">
 			<div class="checkbox">
 				<label class="control-label">
@@ -170,9 +171,9 @@
 					@checkbox(lcForm("emergencia"), 'disabled -> "disabled")
 				</label>
 			</div>
-		</div>	
-	</div> 
-	<div class="row">	
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-sm-2">
 			<div class="checkbox">
 				<label class="control-label">
@@ -180,7 +181,7 @@
 					@checkbox(lcForm("cerrar"), 'disabled -> "disabled")
 				</label>
 			</div>
-		</div>		
+		</div>
 		<div class="col-sm-2">
 			<div class="checkbox">
 				<label class="control-label">
@@ -188,7 +189,7 @@
 					@checkbox(lcForm("activo"), 'disabled -> "disabled")
 				</label>
 			</div>
-		</div>		
+		</div>
 		<div class="col-sm-3">
 			<div class="checkbox">
 				<label class="control-label">
@@ -196,8 +197,8 @@
 					@checkbox(lcForm("guardia"), 'disabled -> "disabled")
 				</label>
 			</div>
-		</div>	
-		
+		</div>
+
 		<div class="col-sm-3">
 			<div class="checkbox">
 				<label class="control-label">
@@ -205,10 +206,10 @@
 					@checkbox(lcForm("profe"), 'disabled -> "disabled")
 				</label>
 			</div>
-		</div>	
-		
-	</div> 
-	@views.html.expediente.expediente.tabsExpediente(false, lcForm) 
-	
-	 
+		</div>
+
+	</div>
+	@views.html.expediente.expediente.tabsExpediente(false, lcForm)
+
+
 }
